Tue May 22 06:25:10 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryinternal.cc: Handle the left side of AND_NOT and
	  AND_MAYBE being MatchNothing in add_subquery() rather than
	  in done().

Tue May 22 02:40:45 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryinternal.cc: Handle QueryAndLike with a MatchNothing
	  subquery in add_subquery() rather than done().

Tue May 22 02:01:00 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,api/queryinternal.h: Drop MatchNothing
	  subqueries in OR-like situations in add_subquery() rather than
	  adding them and then handling it later.

Sat May 19 00:27:23 GMT 2012  Olly Betts <olly@survex.com>

	* tests/runsrv.in: Add explanation of why we have this script.

Sat May 19 00:27:10 GMT 2012  Olly Betts <olly@survex.com>

	* tests/runtest.in: Fix comment typo.

Fri May 18 12:50:08 GMT 2012  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc: Check if the database is
	  closed when asked to iterate metadata keys.  Fixes recently added
	  testcase closedb10 for inmemory.

Fri May 18 12:34:24 GMT 2012  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Pass -ldl last when compiling zlib-vg.so, as that
	  seems to be needed on Ubuntu 12.04.

Fri May 18 04:54:09 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_closedb.cc: We now test almost all methods of Database
	  and WritableDatabase after calling close().  (ticket#337)

Thu May 17 14:26:11 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/: After closing the database, methods
	  which try to use the termlist would throw FeatureUnavailableError
	  with message "Database has no termlist", assuming that the termlist
	  table not being open meant it wasn't present.  Fix to check if the
	  postlist_table is open to determine which case we're in.
	* tests/api_closedb.cc: Improve test coverage for closed databases.
	  (ticket#337)

Tue May 15 11:24:34 GMT 2012  Olly Betts <olly@survex.com>
